fix: modal file picker file-filter z-index

--- a/app/assets/stylesheets/folio/console/modules/reacty/_file-filter.sass
+++ b/app/assets/stylesheets/folio/console/modules/reacty/_file-filter.sass
@@ -12,3 +12,5 @@
     padding-bottom: $modal-header-padding-y
     padding-left: $modal-inner-padding
     padding-right: $modal-inner-padding
+    position: relative
+    z-index: 10
